--- a/index.html
+++ b/index.html
@@ -306,80 +306,77 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Education and Skills</h2>
-                <p>I always wanted to work as an engineer, in order to do that I had to study in France and Italy. While I was studying and working, I obtained new skills which you could find in the section below.</p>
+                <p>
+                    I always wanted to work as an engineer, in order to do that I had to study in France and Italy. While I was studying and working, I obtained new skills which you could find in the section below.
+                </p>
                 <hr class="hrReduce"/>
                 <h3>Education</h3>
-                <p>
-                    <!--=========== Polytech sub-Section ===========-->              
-                    <small class="text-muted">
-                        <i class="glyphicon glyphicon-time"></i> 
-                        2012 - 2017 
-                    </small>
-                    <br>
-                    Engineering formation – École polytechnique de l'université de Tours
-                    <ul>
-                        <li>
-                            Programming language: C - C++ - Java - UML
-                        </li>
-                        <li>
-                            Database: Oracle - SQL - Modèle Merise
-                        </li>
-                        <li>
-                            Project gestion : Maven - Git - Apache Subversion
-                        </li>
-                        <li>
-                            System: Unix
-                        </li>
-                        <li>
-                            Thoerical sciences: Physics - Mathematical analysis - Algebra
-                        </li>
-                    </ul>
-                </p>
+                <!--=========== Polytech sub-Section ===========-->              
+                <small class="text-muted">
+                    <i class="glyphicon glyphicon-time"></i> 
+                    2012 - 2017 
+                </small>
+                <br>
+                Engineering formation – École polytechnique de l'université de Tours
+                <ul>
+                    <li>
+                        Programming language: C - C++ - Java - UML
+                    </li>
+                    <li>
+                        Database: Oracle - SQL - Modèle Merise
+                    </li>
+                    <li>
+                        Project gestion : Maven - Git - Apache Subversion
+                    </li>
+                    <li>
+                        System: Unix
+                    </li>
+                    <li>
+                        Thoerical sciences: Physics - Mathematical analysis - Algebra
+                    </li>
+                </ul>
                 <!--========= end of Polytech sub-Section =========-->   
 
                 <!--============== Siena sub-Section ==============-->
-                <p>
-                    <small class="text-muted">
-                        <i class="glyphicon glyphicon-time"></i> 
-                        February 2016 - July 2016 
-                    </small>
-                    <br>
-                    Engineering formation – Università degli Studi di Siena
-                    <ul>
-                        <li>
-                            Artificial Intelligence : Neuronal networks - Decision theory
-                        </li>
-                        <li>
-                            Operational research: optimization - Linear programming
-                        </li>
-                        <li>
-                            Bioinformatics : Constraint Logic Programming - Sequence comparison
-                        </li>
-                    </ul>
-                </p>
+                <small class="text-muted">
+                    <i class="glyphicon glyphicon-time"></i> 
+                    February 2016 - July 2016 
+                </small>
+                <br>
+                Engineering formation – Università degli Studi di Siena
+                <ul>
+                    <li>
+                        Artificial Intelligence : Neuronal networks - Decision theory
+                    </li>
+                    <li>
+                        Operational research: optimization - Linear programming
+                    </li>
+                    <li>
+                        Bioinformatics : Constraint Logic Programming - Sequence comparison
+                    </li>
+                </ul>
                 <!--========== End of Siena sub-Section ===========-->
 
                 <!--============== SUPINFO Section ================-->
-                <p>
-                    <small class="text-muted">
-                        <i class="glyphicon glyphicon-time"></i> 
-                        2011 – 2012 
-                    </small>
-                    <br>
-                    Associate of science - SUPINFO Tours
-                    <ul>
-                        <li>
-                            web: HTML - JavaScript – PHP
-                        </li>
-                        <li>
-                            Network: CCNA 1 to 4 CISCO
-                        </li>
-                        <li>
-                            I.T Laws : Intellectual property
-                        </li>
-                    </ul>
-                </p>
+                <small class="text-muted">
+                    <i class="glyphicon glyphicon-time"></i> 
+                    2011 – 2012 
+                </small>
+                <br>
+                Associate of science - SUPINFO Tours
+                <ul>
+                    <li>
+                        web: HTML - JavaScript – PHP
+                    </li>
+                    <li>
+                        Network: CCNA 1 to 4 CISCO
+                    </li>
+                    <li>
+                        I.T Laws : Intellectual property
+                    </li>
+                </ul>
                 <!--========== End of SUPINFO sub-Section =========-->
+                
                 <hr class="hrReduce"/>
                 <h3>Skills</h3>
                 <h4>Technicals</h4>
