--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-custom navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -376,7 +376,7 @@
                     </li>
                 </ul>
                 <!--========== End of SUPINFO sub-Section =========-->
-                
+
                 <hr class="hrReduce"/>
                 <h3>Skills</h3>
                 <h4>Technicals</h4>
