--- a/index.html
+++ b/index.html
@@ -311,13 +311,16 @@
                 </p>
                 <hr class="hrReduce"/>
                 <h3>Education</h3>
-                <!--=========== Polytech sub-Section ===========-->              
-                <small class="text-muted">
-                    <i class="glyphicon glyphicon-time"></i> 
-                    2012 - 2017 
-                </small>
-                <br>
-                Engineering formation – École polytechnique de l'université de Tours
+                <!--=========== Polytech sub-Section ===========-->
+                <div class="HeadFormation">
+                    <small class="text-muted">
+                        <i class="glyphicon glyphicon-time"></i> 
+                        2012 - 2017 
+                    </small>
+                    <br>
+                    Engineering formation – École polytechnique de l'université de Tours   
+                </div>              
+
                 <ul>
                     <li>
                         Programming language: C - C++ - Java - UML
@@ -338,12 +341,14 @@
                 <!--========= end of Polytech sub-Section =========-->   
 
                 <!--============== Siena sub-Section ==============-->
-                <small class="text-muted">
-                    <i class="glyphicon glyphicon-time"></i> 
-                    February 2016 - July 2016 
-                </small>
-                <br>
-                Engineering formation – Università degli Studi di Siena
+                <div class="HeadFormation">
+                    <small class="text-muted">
+                        <i class="glyphicon glyphicon-time"></i> 
+                        February 2016 - July 2016 
+                    </small>
+                    <br>
+                    Engineering formation – Università degli Studi di Siena
+                </div>
                 <ul>
                     <li>
                         Artificial Intelligence : Neuronal networks - Decision theory
@@ -358,12 +363,14 @@
                 <!--========== End of Siena sub-Section ===========-->
 
                 <!--============== SUPINFO Section ================-->
-                <small class="text-muted">
-                    <i class="glyphicon glyphicon-time"></i> 
-                    2011 – 2012 
-                </small>
-                <br>
-                Associate of science - SUPINFO Tours
+                <div class="HeadFormation">
+                    <small class="text-muted">
+                        <i class="glyphicon glyphicon-time"></i> 
+                        2011 – 2012 
+                    </small>
+                    <br>
+                    Associate of science - SUPINFO Tours
+                </div>
                 <ul>
                     <li>
                         web: HTML - JavaScript – PHP
