--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <p class="intro-text">On this website you'll find who i'm, what am i good at, what i've already done!</p>
+                        <p class="intro-text">On this website you'll find who I'm, what am I good at, what I've already done!</p>
                         <a href="#whoAmI" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -108,16 +108,16 @@
                     <br>
                     <br>
 
-                    At the beggining if i choose to work in computer science that was because it was an intellectually stimulating field which allowed me to practice my curiosity and in which it was necessary to question, to adapt quickly.
+                    At the beginning  if I choose to work in computer science that was because it was an intellectually stimulating field which allowed me to practice my curiosity and in which it was necessary to question, to adapt quickly.
                     <br>
                     <br>
 
-                    Today, what i like is the human contact, transmit knowledge and exchanges with others. Due to my professional experiences I have gained some fluency and became a good instructor.
+                    Today, what I like is the human contact, transmit knowledge and exchanges with others. Due to my professional experiences I have gained some fluency and became a good instructor.
                     <br>
                     I'm not sensitive to the pressure and I like challenges; this already allowed me to distinguish myself in various professional and sporting challenges.
                     <br>
 
-                    I appreciate to have responsibilities, to be able to take initiative and the teamwork . In the past this allowed me to develop myself as head of the division office of partnership in the studients union of my school
+                    I appreciate having responsibilities, to be able to take initiative and the teamwork. In the past this allowed me to develop myself as head of the division office of partnership in the students union of my school.
                 </p>
                 <hr class="hrFull"/>
             </div>
@@ -132,7 +132,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Experiences</h2>
                     <p>
-                        I work since i'm 18 years old, here you'll find a little sum-up of when and where i worked, what i learned there...
+                        I work since I'm 18 years old, here you'll find a little sum-up of when and where I worked, what I learned there...
                     </p>
                     <ul class="timeline">
 
@@ -159,9 +159,9 @@
                                         <br>
                                     </p>
                                     <p class="description">
-                                        Website developement using Jahia, web technologies and JAVA/JEE.
+                                        Website development using Jahia, web technologies and JAVA/JEE.
                                         <br>
-                                        Important team Work and project gestion.
+                                        Important team Work and project management.
                                     </p>
                                 </div>
                             </div>
@@ -326,7 +326,7 @@
                         Programming language: C - C++ - Java - UML
                     </li>
                     <li>
-                        Database: Oracle - SQL - Modèle Merise
+                        Database: Oracle - SQL - Merise model
                     </li>
                     <li>
                         Project gestion : Maven - Git - Apache Subversion
@@ -411,7 +411,7 @@
                         English: Proficient ( C1 )
                     </li>
                     <li>
-                        Italian: Independant ( C1 )
+                        Italian: Independent ( C1 )
                     </li>
                     <li>
                         Spanish: Basic ( B2 )
@@ -444,33 +444,33 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Hobbies</h2>
-                    <p>In order to understand who i truely am, it's necessary to know what I particulary like.</p>
+                    <p>In order to understand who I truly  am, it's necessary to know what I particularly  like.</p>
                     <br>
                     <div class="HobbiesLeft">
                         <img class="img-rounded imgAlign" src="img/HobbiesGolf.jpg" alt="Smiley face" height="155">
                         <p>
-                            I started to play golf in 2013, i like this sport because it requires to keep his nerve, to be concentrated for hours while playing. It's also very usefull to clear his mind. I started competitions in 2015 and today my handicap is under 25.
+                            I started to play golf in 2013, I like this sport because it requires keeping his nerve, to be concentrated for hours while playing. It's also very useful  to clear his mind. I started competitions in 2015 and today my handicap is under 25.
                         </p>
                     </div>
 
                     <div class="HobbiesRight">
                         <img class="img-rounded imgAlign" src="img/HobbiesRowing.jpg" alt="Smiley face" height="155">
                         <p>
-                            My first experience with rowing was in 2014, i did this sport for 2 years with my school. What i liked was the team spirit, it's important to overcome yourself for the team. The best memory that i've got was in 2015 when we won the universitary national championship in our category.
+                            My first experience with rowing was in 2014, I did this sport for 2 years with my school. What I liked was the team spirit, it's important to overcome yourself for the team. The best memory that I've got was in 2015 when we won the university national championship in our category.
                         </p>
                     </div>
 
                     <div class="HobbiesLeft">
                         <img class="img-rounded imgAlign" src="img/HobbiesBike.jpg" alt="Smiley face" height="155">
                         <p>
-                            Since i'm 12 years old, i'm riding Dirt bikes. Today i'm even riding on the road. Motocross is a complete sport, it's important to stay focus all the time. Today i'm practicing it for fun, but in the past it did some competitions. It teached me how to keep calm in every situations.
+                            Since I'm 12 years old, I'm riding Dirt bikes. Today I'm even riding on the road. Motocross is a complete sport, it's important to stay focus all the time. Today I'm practicing  it for fun, but in the past it did some competitions. It taught me how to keep calm in every situations.
                         </p>
                     </div>
 
                     <div class="HobbiesRight">
                         <img class="img-rounded imgAlign" src="img/HobbiesTravel.jpg" alt="Smiley face" height="155">
                         <p>
-                            I like to travel, it's always meaningfull to see new things, discover new ways of livings. It deeply changes the way you think, sometimes it forces yourself to step back from what you believed to know. That's why in 2015 I decided to spend 6 months abroad in Italy.
+                            I like to travel, it's always meaningful  to see new things, discover new ways of livings. It deeply changes the way you think, sometimes it forces yourself to step back from what you believed to know. That's why in 2015 I decided to spend 6 months abroad in Italy.
                         </p>
                     </div>
                     <hr class="hrFull"/>
