Correction and Domain
Correct some gramatical issues
Add a Domain Name

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <img class="img-rounded imgAlign" src="img/CV.jpg" alt="Smiley face" height="150">
 
                 <p>
-                    Hi, my name is Germain.I'm 24 years old student in an engineering school.
+                    Hi, my name is Germain.I'm a 24 years old student in an engineering school.
                     <br>
 
                     Currently, I'm doing a professional training contract within Atos Integration as analyst and developer.
