--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                             <a href="http://www.viadeo.com/fr/profile/germain.moreau" class="btn btn-default btn-lg"><i class="fa fa-viadeo fa-fw"></i> <span class="network-name">Viadeo</span></a>
                         </li>
                         <li>
-                            <a href="mailto:germain.moreau@free.fr" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">e-mail</span></a>
+                            <a href="mailto:contact@germainmoreau.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">e-mail</span></a>
                         </li>
                         <li>  
                             <a href="ressources/CV-MOREAU-GERMAIN-FR.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Resume</span></a>
