correct class duplication problem

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <p class="EN" class="intro-text">On this website you'll find who I'm, what am I good at, what I've
+                    <p class="intro-text EN">On this website you'll find who I'm, what am I good at, what I've
                         already done!</p>
-                    <p class="FR" class="intro-text">Sur ce site vous trouverez qui je suis, ce pour quoi je suis doué
+                    <p class="intro-text FR">Sur ce site vous trouverez qui je suis, ce pour quoi je suis doué
                         ainsi que ce que j'ai déjà fait!</p>
-                    <p class="IT" class="intro-text">In questo sito troverete chi sono, cosa sono bravo, quello che ho
+                    <p class="intro-text IT">In questo sito troverete chi sono, cosa sono bravo, quello che ho
                         già fatto!</p>
                     <a href="#whoAmI" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
